.config/frontend/react-frontend.yaml
# Deployment configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-deployment
  labels:
    app: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: dhakadb/react-frontend:stable
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
---
# internal service
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  labels:
    app: react-frontend
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
